[package]
name = "rust-workflow-2"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.14.0", features = [
    "macros",
    "scalar",
    "axum",
    "axum-json",
    "axum-query",
] }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-routing"] }
axum-typed-routing = { version = "0.3.0", features = ["aide"] }
# axum-typed-routing = { version = "0.3.0", features = ["aide"] }
axum_thiserror = "0.1.0"
bytes = "1.10.1"
derive_more = { version = "2.0.1", features = ["full"] }
drain_filter_polyfill = "0.1.3"
fe2o3-amqp = "0.14.0"
fe2o3-amqp-ext = "0.14.0"
futures = "0.3.31"
lapin = "3.0.0"
macros = { version = "0.1.0", path = "macros" }
schemars = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "macros", "runtime-tokio"] }
surrealdb-tikv-client = "0.3.0-surreal.3"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typemap_rev = "0.4.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[workspace]
members = ["macros"]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
panic = "abort"
