[package]
name = "embedded-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
adapter-types = { version = "0.1.0", path = "../adapter_types" }
async-channel = "2.5.0"
aws-config = { version = "1.8.3", features = ["behavior-version-latest", "rustls"] }
aws-credential-types = { version = "1.2.4", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = { version = "1.86.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.78.0", features = ["behavior-version-latest"] }
aws-types = "1.3.8"
derive_more = { version = "2.0.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "macros", "uuid", "json"] }
surgeflow-types = { version = "0.1.0", path = "../surgeflow_types" }
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
