[package]
name = "embedded-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
adapter-types = { version = "0.1.0", path = "../adapter_types" }
async-channel = "2.5.0"

derive_more = { version = "2.0.1", features = ["full"] }
papaya = "0.2.3"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "macros", "uuid", "json"] }
surgeflow-types = { version = "0.1.0", path = "../surgeflow_types" }
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
