[package]
name = "surgeflow"
version = "0.1.0"
edition = "2024"

[dependencies]
adapter-types = { version = "0.1.0", path = "../adapter_types" }
aide = { git = "https://github.com/Zizico2/aide.git", branch = "feat/typed-routing-with", features = [
    "macros",
    "scalar",
    "axum",
    "axum-json",
    "axum-query",
    "axum-extra-typed-routing",
] }
anyhow = { version = "1.0.98" }
axum = { version = "0.8.4", features = ["http2", "macros", "multipart"] }
control-server = { version = "0.1.0", path = "../control_server" }
derive_more = { version = "2.0.1", features = ["full"] }
macros = { version = "0.1.0", path = "../macros" }
surgeflow-types = { version = "0.1.0", path = "../surgeflow_types" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tracing = "0.1.41"

[features]
default = [
    "new_instance_worker",
    "failed_instance_worker",
    "completed_instance_worker",
    "active_step_worker",
    "next_step_worker",
    "new_event_worker",
    "completed_step_worker",
    "failed_step_worker",
    "control_server",
]
new_instance_worker = []
failed_instance_worker = []
completed_instance_worker = []
active_step_worker = []
next_step_worker = []
new_event_worker = []
control_server = []
completed_step_worker = []
failed_step_worker = []
