[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
config = "0.15.13"
dotenvy = "0.15.7"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "1.0.4"
thiserror = "2.0.12"
aide = { git = "https://github.com/Zizico2/aide.git", branch = "feat/typed-routing-with", features = [
    "macros",
    "scalar",
    "axum",
    "axum-json",
    "axum-query",
    "axum-extra-typed-routing",
] }

aws-adapter = { version = "0.1.0", path = "../../aws_adapter" }
surgeflow = { version = "0.1.0", path = "../../surgeflow" }